fix(navbar): fix navbar z-index problem

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -204,6 +204,7 @@ h6 {
           align-items: center;
   width: 100%;
   height: 80px;
+  z-index: 10;
 }
 
 .navbar__container {
