--- a/assets/scss/layout/_navbar.scss
+++ b/assets/scss/layout/_navbar.scss
@@ -5,6 +5,7 @@
   align-items: center;
   width: 100%;
   height: 80px;
+  z-index: 10;
 
   &__container {
     justify-content: space-between;
